Home: add button and product card components

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,5 +1,7 @@
 //Colors
 $yellow: #FEBD17;
+$yellow-dark: #edab02;
+$yellow-10a: #FEBD171A;
 $black: #000000;
 $white: #ffffff;
 $grey-dark: #373738;
