--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -2,6 +2,7 @@
 $yellow: #FEBD17;
 $yellow-dark: #edab02;
 $yellow-10a: #FEBD171A;
+$yellow-30a: #FEBD172A;
 $black: #000000;
 $white: #ffffff;
 $grey-dark: #373738;
