Product: add to cart button, widget, and store functions

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -8,8 +8,9 @@ $white: #ffffff;
 $grey-dark: #373738;
 $grey-mid: #484848;
 $grey-light: #ACACAC;
-$counter-background: #e5e5e5;
-$counter-buttons-bg: rgba(229, 229, 229, 0.5);
+$grey-light-10a: #ACACAC1A;
+$counter-background: #E5E5E580;
+$counter-buttons-bg: #e5e5e5;
 
 //Fonts
 $font-base: 'Roboto', sans-serif;
